# connectrylab-omnitrade-mcp

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  TEST_SUITE.md  TEST_SUITE_v2.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop.yml  publish.yml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/commands/: alerts.rs  config.rs  daemon.rs  dca.rs  mod.rs  portfolio.rs  prices.rs
desktop/src/components/: Logo.tsx  Sidebar.css  Sidebar.tsx
desktop/src/styles/: global.css  variables.css
desktop/src/views/: Alerts.css  Alerts.tsx  DCA.css  DCA.tsx  Dashboard.css  Dashboard.tsx  Portfolio.css  Portfolio.tsx  Prices.css  Prices.tsx  Settings.css  Settings.tsx
src/: cli.ts  index.ts
src/config/: loader.ts
src/daemon/: core.ts
src/dashboard/: index.ts
src/exchanges/: manager.ts
src/paper/: wallet.ts
src/tools/: alerts.ts  arbitrage.ts  balances.ts  charts.ts  conditional-orders.ts  dca.ts  orders.ts  portfolio-history.ts  rebalance.ts
src/types/: index.ts
src/utils/: svg-chart.ts
