[package]
name = "omnitrade-desktop"
version = "0.9.5"
description = "OmniTrade Desktop — Multi-exchange AI trading terminal"
authors = ["Connectry Labs <labs@connectry.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Connectry-io/connectrylab-omnitrade-mcp"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
chrono = "0.4"
urlencoding = "2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "s"
strip = true
